@@ -231,9 +231,11 @@ ACE_END_VERSIONED_NAMESPACE_DECL
      if (POINTER == 0) { errno = ENOMEM; } \
    } while (0)
 
-# define ACE_throw_bad_alloc \
-  void* gcc_will_complain_if_literal_0_is_returned = 0; \
-  return gcc_will_complain_if_literal_0_is_returned
+# if defined (ACE_HAS_MFC) && (ACE_HAS_MFC == 1)
+#   define ACE_throw_bad_alloc AfxThrowMemoryException ()
+# else
+#   define ACE_throw_bad_alloc throw ACE_bad_alloc ()
+# endif
 
 #endif /* ACE_NEW_THROWS_EXCEPTIONS */
 
